# vscode-ygscript

./: LICENSE  README.md
structers/: bool_var.txt  char_var.txt  conditions_func.txt  double_var.txt  float_var.txt  function.txt  import-lib_func.txt  init_var.txt  input_func.txt  loops_func.txt  mut_func.txt  pointer_func.txt  show_func.txt  variables.txt
testing/: test-sub1.yg
vscode-ygscript/: extension.js  language-configuration.json  package-lock.json  package.json  ygscript-1.0.0.vsix
vscode-ygscript/icons/: ygscript-icon-theme.json
vscode-ygscript/syntaxes/: ygscript.tmLanguage.json
ygscript/: BUILD_SUMMARY.md  COMPLETION_SUMMARY.md  FILE_MANIFEST.md  FINAL_REPORT.md  IMPLEMENTATION_GUIDE.md  INDEX.md  LANGUAGE_SPEC.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  control_flow.yg  functions.yg  hello_world.yg  setup.py  test_suite.py  variables.yg  ygscript.bat
ygscript/src/: CMakeLists.txt  __init__.py  ast_nodes.py  cpp_ast.hpp  cpp_bytecode.hpp  cpp_compiler.hpp  cpp_lexer.cpp  cpp_lexer.hpp  cpp_parser.cpp  cpp_parser.hpp  cpp_token.cpp  cpp_token.hpp  cpp_vm.hpp  lexer.py  main.cpp  parser.py  runtime.py  ygscript.py
